[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async
tokio = { version = "1.19.2", features = ["full"] }
async-trait = "0.1.56"


# Database
sqlx = { version = "0.6.0", features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "time",
    "chrono",
] }
ormlite = { version = "0.3.1", features = ["postgres", "runtime-tokio-rustls"] }
fred = { version = "5.1.0", features = ["subscriber-client", "serde-json"] }

# HTTP
axum = { version = "0.5.8", features = ["ws", "headers"] }
reqwest = { version = "0.11", features = ["json"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
serde_repr = "0.1.8"
serde_with = { version = "1.14.0", features = ["json"] }

# Logging
log = "0.4.17"
env_logger = "0.9.0"


# Security
tower-http = { version = "0.3.0", features = ["cors"] }
rust-argon2 = "1.0.0"
governor = "0.4.2"
validator = { version = "0.15", features = ["derive"] }

# Utility
dotenv = "0.15.0"
lazy_static = "1.4.0"
once_cell = "1.12.0"
nanoid = "0.4.0"
bitflags = "1.3.2"
regex = "1.5.6"
quick-error = "2.0.1"
futures = "0.3"
ctor = "0.1.22"
rs-snowflake = "0.6.0"
chrono = { version = "0.4.19", features = ["serde"] }
inter-struct = "0.2.0"

# Docs
opg = { git = "https://github.com/abdulrahman1s/opg", rev = "24f72e7cf09da7cd61b71aedaa14383502559612" }


[patch.crates-io]
ormlite-macro = { git = "https://github.com/abdulrahman1s/ormlite", rev = "9f8ef977d3516c12e2cf7e35e7a484d7f5911c38" }
